--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h2>Get In Touch</h2>
       <h3>Lets code together!</h3>
       <p class="contact-msg">If you are interested to get in touch with me. Click on the below button.</p>
-      <a class="btn" href="mailto:mohith.marisetti@gmail.com">CONTACT ME</a>
+      <a class="btn" href="mailto:mohithmarisetti@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
