--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <title>Mohith Marisetti</title>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="shortcut icon" href="favicon.ico">
+   <link rel="shortcut icon" href="favicon.ico">  
+  <!--<link rel="icon" href="https://img.icons8.com/material/24/000000/web.png">  -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
 </head>
 
@@ -17,6 +18,8 @@
     <h2 class="top-designation">A <span class="pro">pro</span>grammer.</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="a-cloud">
     <img src="images/mountain.png" alt="a-mountain">
+    <img class="bottom-cloud-right" src="images/cloud.png" alt="a-cloud">
+
   </div>
 
   <div class="middle-container">
@@ -49,7 +52,7 @@
   </div>
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://www.instagram.com/mohith_marisetti/?hl=en">Instagram</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.uta.edu/uta/">Website</a>
     <p class="copyrights-paragraph">© 2019 Mohith Marisetti.</p>
