--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Mohith Marisetti</title>
   <link rel="stylesheet" href="css/styles.css">
-   <link rel="shortcut icon" href="favicon.ico">  
+   <link rel="shortcut icon" href="favicon.ico">
   <!--<link rel="icon" href="https://img.icons8.com/material/24/000000/web.png">  -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
 </head>
@@ -17,15 +17,15 @@
     <h1>I'm Mohith</h1>
     <h2 class="top-designation">A <span class="pro">pro</span>grammer.</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="a-cloud">
-    <img src="images/mountain.png" alt="a-mountain">
-    
+    <img class="mountain" src="images/mountain.png" alt="a-mountain">
+
 
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img class="" src="images/profile-pic.jpg" alt="profile-pic">
-      <h2>Hello.</h2>
+      <img class="profile-pic" src="images/profile-pic.jpg" alt="profile-pic">
+      <h2 class="hello">Hello.</h2>
       <p class="profile-paragraph">I am a student at University of Texas Arlington currently doing my masters in Computer Science and Engineering.</p>
     </div>
     <hr>
@@ -33,13 +33,13 @@
       <h2 class="my-skills">My Skills</h2>
       <div class="skill-row">
         <img class="code-editor-img" src="images/code-editor.png" alt="">
-        <h3>Software Development</h3>
-        <p>I program code to perform a certain task. I develop my programs in C, C++, python, Java.</p>
+        <h3 class="skill1">Software Development</h3>
+        <p class="skill1-paragraph">I program code to perform a certain task. I develop my programs in C, C++, python, Java.</p>
       </div>
       <div class="skill-row">
         <img class="web-dev-img" src="images/web-dev.png" alt="">
-        <h3>Web Development</h3>
-        <p>I also develop Web Apps. I use Django Framework and use HTML5 with CSS3 to develop some stunning websites.</p>
+        <h3 class="skill2">Web Development</h3>
+        <p class="skill2-paragraph">I also develop Web Apps. I use Django Framework and use HTML5 with CSS3 to develop some stunning websites.</p>
       </div>
     </div>
     <hr>
